PlatformService/K8S/platforms-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: platforms-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: platformservice
  template:
    metadata:
      labels:
        app: platformservice
    spec:
      containers:
        - name: platformservice
          image: bigbirdhateyou/platformservice:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 80
            - name: grpc
              containerPort: 1515 
          resources:
            limits:
              memory: "512Mi"
              cpu: "500m"
            requests:
              memory: "256Mi"
              cpu: "250m"
---
apiVersion: v1
kind: Service
metadata:
  name: platforms-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: platformservice
  ports:
    - name: platformservice
      protocol: TCP
      port: 80
      targetPort: 80    # Container port
    - name: platformgrpc
      protocol: TCP
      port: 1515
      targetPort: 1515 # Container port
