PlatformService/K8S/platforms-np-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: platformnpservice-srv
spec:
  type: NodePort
  selector:
    app: platformservice
  ports:
    - name: platformservice
      protocol: TCP
      port: 80          # Service port
      targetPort: 80    # Container port
      nodePort: 30001   # Add this line - external port
---
