PlatformService/K8S/rabbitmq-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq-deployment
spec:
  replicas: 1
  selector:
   matchLabels:
     app: rabbitmq
  template:
    metadata:
      labels:
        app: rabbitmq
    spec:
      containers:
        - name: rabbitmq
          image: rabbitmq:3-management
          imagePullPolicy: Always
          ports:
            - containerPort: 5672
              name: rmq-msg        # Shortened name
            - containerPort: 15672
              name: rmq-mgmt       # Shortened name
          resources:
            limits:
              memory: "512Mi"
              cpu: "500m"
            requests:
              memory: "256Mi"
              cpu: "250m"
---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-clusterip-srv
spec:
  type: ClusterIP          # Internal cluster access only
  selector:
    app: rabbitmq         # Maps to pods with label app: rabbitmq
  ports:
    - name: rmq-msg              # Shortened name
      protocol: TCP
      port: 5672                 # Service port
      targetPort: 5672          # Container port
    - name: rmq-mgmt             # Shortened name
      protocol: TCP
      port: 15672               # Service port
      targetPort: 15672         # Container port
---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-loadbalancer
spec:
  type: LoadBalancer      # External access to the service
  selector:
    app: rabbitmq         # Maps to pods with label app: rabbitmq
  ports:
    - name: rmq-msg              # Shortened name
      protocol: TCP
      port: 5672                 # Service port
      targetPort: 5672          # Container port
    - name: rmq-mgmt             # Shortened name
      protocol: TCP
      port: 15672               # Service port
      targetPort: 15672         # Container port
